--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -1,10 +1,5 @@
 <h1>Seja bem Vindo</h1>
-<h2>Digitando Algo</h2>
-<h4>Outro Texto</h4>
 
-<hr>
-<p>Linha Horizontal</p>
-<hr>
-
-<p>Um parágrafo qualquer</p>
-<strong>Texto <u>Forted</u></strong>
+<img src="https://www.google.com/logos/google.jpg" alt="Logo Antiga do Google" width="230px">
+<br>
+<a href="https://google.com">Clique aqui para entrar no google</a>
