--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -1,5 +1,10 @@
-<h1>Seja bem Vindo</h1>
-
-<img src="https://www.google.com/logos/google.jpg" alt="Logo Antiga do Google" width="230px">
-<br>
-<a href="https://google.com">Clique aqui para entrar no google</a>
+<!DOCTYPE html>
+<html>
+  <head>
+		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <title>Teste</title>
+  </head>
+  <body>
+    Testando 1,2,3
+  </body>
+</html>
